prod_snapshot_2015-09-24_1030/objects/KPIRep__c.object
<CustomObject>
    <fields>
        <fullName>Conf_Number__c</fullName>
        <formula>User__r.Conf_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conf Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Training__c</fullName>
        <label>Product Training</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rep_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_To__c</fullName>
        <formula>User__r.Role_Report_To__r.User_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_License_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC License Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Training__c</fullName>
        <label>Sales Training</label>
        <picklist>
            <picklistValues>
                <fullName>Costigan Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costigan Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costigan Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costigan Management Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caito Sales Training</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UserIdFull__c</fullName>
        <formula>CASESAFEID(User__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserIdFull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <formula>User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserIsActive__c</fullName>
        <formula>IF(User__r.IsActive = True,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserIsActive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Manager__c</fullName>
        <formula>User__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <formula>User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>KPI Rep</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>User__c</columns>
        <columns>UserId__c</columns>
        <columns>UserIdFull__c</columns>
        <columns>Role__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserIsActive__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllDCAcccountExecs</fullName>
        <columns>User__c</columns>
        <columns>NAME</columns>
        <columns>UserIdFull__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Profile__c</field>
            <operation>equals</operation>
            <value>DC Account Executive</value>
        </filters>
        <filters>
            <field>UserIsActive__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All DC Account Execs</label>
    </listViews>
    <nameField>
        <label>KPI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Reps</pluralLabel>
    <recordTypes>
        <fullName>ACQ</fullName>
        <active>true</active>
        <description>Acquisitions Team Personnel</description>
        <label>ACQ</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>